--- a/_data/home_callouts.yml
+++ b/_data/home_callouts.yml
@@ -1,12 +1,12 @@
 style: is-light
 items:
-  - title: Multiple page layouts
-    subtitle: Including sidebar, menubar, tabs and callouts
-    icon: fa-copy
-  - title: Blog included
-    subtitle: Layouts for blog and post pages included
-    icon: fa-mail-bulk
-  - title: Works with GitHub Pages
-    subtitle: Quick and easy to get started
-    icon: fa-github
+  - title: Enriches Central
+    subtitle: Provides different features to supplement Central.
+    icon: fa-square-plus
+  - title: Integration
+    subtitle: Integrates Central with external systems.
+    icon: fa-cloud-arrow-up
+  - title: Custom Features
+    subtitle: Delivers different customisations of processes in Central.
+    icon: fa-gears
     icon_brand: true
