updated guides menu

--- a/_data/guides_menu.yml
+++ b/_data/guides_menu.yml
@@ -4,3 +4,5 @@
       link: /guides/sunrise/HubSpot/
     - name: MailChimp
       link: /guides/sunrise/MailChimp
+    - name: Office365 Contacts
+      link: /guides/sunrise/Office365Contacts
